--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>XYZ Hotel</title>
+    <title>Wireapps</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
